--- a/小程序/pages/list/list.wxml
+++ b/小程序/pages/list/list.wxml
@@ -7,7 +7,7 @@
   <!-- 菜单栏目 -->
   <view class="menu">
     <!-- 左侧导航栏 -->
-    <scroll-view scroll-y class="menu_left" scroll-into-view="">
+    <scroll-view scroll-y class="menu_left">
       <view wx:for="{{listData.data}}"
       class="menu_left_item {{activeIndex === index ? 'selected' : 'unselect'}}"
       wx:key="index"
@@ -19,9 +19,9 @@
 
     <!-- 右侧对应商品展示 -->
     <scroll-view scroll-y="true" scroll-top="scroll-top"
-    scroll-into-view="{{toView}}}" scroll-with-animation="true" class="menu_right">
+    scroll-into-view="{{toView}}" scroll-with-animation="true" class="menu_right">
       <view><text>热销推荐</text></view>
-      <view wx:for="{{listData.data}}" wx:key="{{index}}">
+      <view wx:for="{{listData.data}}" wx:key="{{index}}" id="toView{{index}}">
         <view wx:for="{{item.foods}}" wx:for-item="fooditem" class="menu_right_item">
           <!-- 预览图 -->
             <image src="{{fooditem.image_url}}"/>
