--- a/小程序/font/iconfont.wxss
+++ b/小程序/font/iconfont.wxss
@@ -1,10 +1,9 @@
 @font-face {
   font-family: "iconfont"; /* Project id 4464166 */
-  src: url('//at.alicdn.com/t/c/font_4464166_c8ebgxsj6t.woff2?t=1710256623076') format('woff2'),
-       url('//at.alicdn.com/t/c/font_4464166_c8ebgxsj6t.woff?t=1710256623076') format('woff'),
-       url('//at.alicdn.com/t/c/font_4464166_c8ebgxsj6t.ttf?t=1710256623076') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_4464166_6d6ysdf45qj.woff2?t=1710344558099') format('woff2'),
+       url('//at.alicdn.com/t/c/font_4464166_6d6ysdf45qj.woff?t=1710344558099') format('woff'),
+       url('//at.alicdn.com/t/c/font_4464166_6d6ysdf45qj.ttf?t=1710344558099') format('truetype');
 }
-
 
 .iconfont {
   font-family: "iconfont" !important;
@@ -14,11 +13,18 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-jianhao:before {
+  content: "\e61d";
+}
+
+.icon-icon:before {
+  content: "\e6a0";
+}
+
+.icon-gouwuchefill:before {
+  content: "\e73c";
+}
+
 .icon-jiahao1:before {
   content: "\e604";
 }
-
-.icon-jiahao:before {
-  content: "\e600";
-}
-
