增加跳转到点餐页面功能

--- a/小程序/pages/index/index.wxml
+++ b/小程序/pages/index/index.wxml
@@ -9,7 +9,7 @@
   <!-- 中间点击进入菜单 -->
   <view class="menu_bar">
     <!-- 点击按钮 -->
-    <view class="menu_bar_start">开启点餐之旅→</view>
+    <navigator url="/pages/list/list" class="menu_bar_start">开启点餐之旅→</navigator>
     <!-- 推广图 -->
     <image src="{{item.image_ad}}"/>
   </view>
