--- a/小程序/pages/index/index.scss
+++ b/小程序/pages/index/index.scss
@@ -5,6 +5,7 @@
   .slide{
     
     &_image image{
+      width: 100%;
       height: 300rpx;
     }
   }
@@ -24,6 +25,7 @@
     }
 
     image{
+      width: 100%;
       height: 450rpx;
     }
   }
