--- a/小程序/pages/record/record.scss
+++ b/小程序/pages/record/record.scss
@@ -1,1 +1,50 @@
 /* pages/record/record.wxss */
+.record{
+
+  // 头像
+  &_avatar{
+    height: 500rpx;
+    background-color: orange;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    image{
+      width: 300rpx;
+      height: 50%;
+      border-radius: 50%;
+    }
+  }
+
+  // 标题
+  &_title{
+    height: 80rpx;
+    line-height: 80rpx;
+    text-align: center;
+    box-shadow: 0 2px 2px rgb(86, 68, 68);
+  }
+
+  // 消费记录
+  &_content{
+    width: 100%;
+    height: 150rpx;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 30rpx;
+    border-bottom: 0.1px solid #E3E3E3;
+
+    &_left{
+      margin-left: 10rpx;
+
+      &_time{
+        color: gray;
+      }
+    }
+
+    &_right{
+      margin-right: 10rpx;
+      color: orange;
+    }
+  }
+}
