--- a/小程序/pages/order/balance/balance.scss
+++ b/小程序/pages/order/balance/balance.scss
@@ -1,1 +1,98 @@
-/* pages/order/balance/balance.wxss */
+.balance{
+
+  &_title{
+    height: 60rpx;
+    line-height: 60rpx;
+    border-bottom: 20rpx solid #E9E9E9;
+  }
+
+  &_detail{
+    font-size: 35rpx;
+    color: #E9E9E9;
+    height: 90rpx;
+    line-height: 90rpx;
+    margin-left: 30rpx;
+  }
+
+  &_item{
+    display: flex;
+    justify-content: space-between;
+    border: 1rpx solid #e3e3e3;
+    padding: 20rpx 0;
+    height: 80rpx;
+    line-height: 80rpx;
+    font-size: 40rpx;
+
+    &_name{
+      margin-left: 20rpx;
+    }
+
+    &_price{
+      margin-right: 20rpx;
+    }
+  }
+
+  &_sum{
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 20rpx solid #E9E9E9;
+    height: 90rpx;
+    line-height: 70rpx;
+    font-size: 35rpx;
+
+    &_txt{
+      margin-left: 20rpx;
+    }
+
+    &_num{
+      margin-right: 20rpx;
+      color: orange;
+    }
+  }
+
+  // 备注
+  &_note{
+    display: flex;
+    flex-direction: column;
+    margin-left: 5%;
+    margin-top: 2%;
+
+    &_title{
+      color: gray;
+    }
+
+    &_textrea{
+      width: 90%;
+      background-color: #e3e3e3;
+      font-size: 30rpx;
+      padding:10px;
+      border-radius: 10px;
+      height: 300rpx;
+    }
+  }
+
+  &_bottom{
+    position: fixed;
+    bottom: 0;
+    display: flex;
+    width: 100%;
+    height: 50px;
+
+    &_left{
+      flex-grow: 7;
+      color: white;
+      background-color: #272323;
+      padding-left: 50rpx;
+      line-height: 50px;
+      font-size: 45rpx;
+    }
+
+    &_right{
+      flex-grow: 3;
+      line-height: 50px;
+      text-align: center;
+      background-color: orange;
+      color: white;
+    }
+  }
+}
